Initial commit with project files

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+.social-links {
+  display: inline-flex; /* Use inline-flex to make it inline and allow flex properties */
+  align-items: center;  /* Vertically center the items */
+}
+
+.social-links a {
+  margin: 0 10px; /* Add some space between the links */
+}
+
+.social-links span {
+  margin: 0 5px; /* Add some space around the pipe character */
+  color: white; /* Set the color to white for visibility */
+}
